# climb

./: .gitmodules  README.md  controller.toml  layout.ls1l  splits.lss
auto-splitter/: Cargo.toml
auto-splitter-prototype/: Cargo.toml
auto-splitter-prototype/src/: main.rs
auto-splitter/examples/: debug.rs
auto-splitter/src/: lib.rs  livesplit.rs  process.rs
joystick_display/celeste/: theme.css  theme.html  theme.json
livesplit-wrapper/: Cargo.toml
livesplit-wrapper/src/: lib.rs
mysplit/: Cargo.toml
mysplit/src/: main.rs
