[package]
name = "auto-splitter"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.7.2"
livesplit-wrapper = {git = "https://github.com/P1n3appl3/livesplit-wrapper"}

[dev-dependencies]
num-bytes = "0.4.0"
nix = "0.23.0"
sysinfo = "0.20.4"

[[example]]
name = "debug"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"
